@@ -60,6 +60,7 @@ jpackage \
   --main-class "$MAIN_CLASS" \
   --module-path "$JAVAFX_DIR" \
   --add-modules javafx.controls,javafx.graphics,jdk.crypto.cryptoki \
+  --java-options "--add-modules=jdk.crypto.cryptoki" \
   --dest "$DIST_DIR"
 
 case "$PACKAGE_TYPE" in
